tests/error/auto_not_array.gw
#! [contains]  not allowed in foreach loop
var Object i;
foreach(a: i)
  <<< a >>>;
